kubernetes/party-battle/backend/versions/v1.3.2/02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: party-battle-backend-v1-3-2
  labels:
    app: party-battle-backend-v1-3-2

spec:
  replicas: 1
  selector:
    matchLabels:
      app: party-battle-backend-v1-3-2
  template:
    metadata:
      labels:
        app: party-battle-backend-v1-3-2
    spec:
      containers:
        - name: party-battle-backend
          image: ghcr.io/thirty-degrees/backend-party-battle:4346e0a0e75fd087e6fe8f64ec9bc8dd39785daf
          ports:
            - name: api
              containerPort: 2567
      imagePullSecrets:
        - name: ghcr-secret
