kubernetes/party-battle/backend/versions/v1.3.2/03-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: default
  name: party-battle-backend-v1-3-2
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`party-battle.thirty-degrees.ch`) && PathPrefix(`/api/v1.3.2`)
      kind: Rule
      priority: 10
      services:
        - name: party-battle-backend-v1-3-2
          port: 80
  tls:
    certResolver: myresolver
